--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ header .shop-nav__info a:first-child {
 }
 
 .wrap .shop__header--photoBox {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -167,4 +168,58 @@ header .shop-nav__info a:first-child {
 .shop__main--axeBox {
   margin-top: 100px;
   margin-bottom: 500px;
+}
+
+.shop__header--photoBox {
+  overflow: hidden;
+  width: 300px;
+  margin: 0 auto;
+}
+
+.carousel {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.carousel img {
+  width: 100%;
+  height: auto;
+}
+
+.arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  font-size: 30px;
+}
+
+.prev {
+  left: 5px;
+}
+
+.next {
+  right: 5px;
+}
+
+.slide__count-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  z-index: 99;
+  color: white;
+  width: 7%;
+  bottom: 10px;
+  left: 10px;
+  display: flex;
+  align-items: center;
+}
+.slide__count-box .arrow {
+  font-size: 20px;
+  margin: 0 5px;
+  cursor: pointer;
+}
+.slide__count-box .counter {
+  margin: 0 5px;
 }/*# sourceMappingURL=style.css.map */
