--- a/shop_detail/css/detail.css
+++ b/shop_detail/css/detail.css
@@ -1,8 +1,13 @@
+@import url("../../css/reset.css");
 @import url("../../css/style.css");
+header .logo a {
+  color: #d1180b;
+}
 
 #selected {
   color: #d1180b;
 }
+
 .grid-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -19,22 +24,25 @@
   border: 1px solid #ddd;
   overflow: hidden;
   cursor: pointer;
-  p {
-    margin: 10px 0px 0px 10px;
-    position: absolute;
-    color: #333;
-    font-size: 1em;
-    font-weight: bold;
-    line-height: normal;
-    letter-spacing: -0.02em;
-  }
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.grid-item p {
+  margin: 10px 0px 0px 10px;
+  position: absolute;
+  color: #333;
+  font-size: 1em;
+  font-weight: bold;
+  line-height: normal;
+  letter-spacing: -0.02em;
 }
 
 .grid-item img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
+
 .box {
   position: absolute;
   left: 2%;
@@ -42,20 +50,23 @@
   transform: translateY(-50%);
   text-align: center;
   padding: 20px;
-  h1 {
-    color: #d1180b;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  p {
-    color: #333;
-    font-weight: bold;
-  }
+  border-right: 2px solid #d1180b;
+}
+.box a {
+  color: #d1180b;
+  font-weight: bold;
+  cursor: pointer;
+}
+.box p {
+  margin-top: 10px;
+  color: #333;
+  font-weight: bold;
 }
 
 #photoBox {
   width: 79%;
 }
+
 #main-box {
   width: 84%;
-}
+}/*# sourceMappingURL=detail.css.map */
