--- a/shop_detail/css/detail.scss
+++ b/shop_detail/css/detail.scss
@@ -1,4 +1,8 @@
+@import url("../../css/reset.css");
 @import url("../../css/style.css");
+header .logo a {
+  color: #d1180b;
+}
 #selected {
   color: #d1180b;
 }
@@ -19,24 +23,23 @@
   border: 1px solid #ddd;
   overflow: hidden;
   cursor: pointer;
-}
-.grid-item p {
-  margin: 10px 0px 0px 10px;
-  position: absolute;
-  color: #333;
-  font-size: 1em;
-  font-weight: bold;
-  line-height: normal;
-  letter-spacing: -0.02em;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  p {
+    margin: 10px 0px 0px 10px;
+    position: absolute;
+    color: #333;
+    font-size: 1em;
+    font-weight: bold;
+    line-height: normal;
+    letter-spacing: -0.02em;
+  }
 }
 
 .grid-item img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
-
 .box {
   position: absolute;
   left: 2%;
@@ -44,21 +47,22 @@
   transform: translateY(-50%);
   text-align: center;
   padding: 20px;
-}
-.box h1 {
-  color: #d1180b;
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-.box p {
-  color: #333;
-  font-weight: bold;
+  border-right: 2px solid #d1180b;
+  a {
+    color: #d1180b;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  p {
+    margin-top: 10px;
+    color: #333;
+    font-weight: bold;
+  }
 }
 
 #photoBox {
   width: 79%;
 }
-
 #main-box {
   width: 84%;
-}/*# sourceMappingURL=style.css.map */
+}
