--- a/shop_search/css/search.scss
+++ b/shop_search/css/search.scss
@@ -1,68 +1,56 @@
-@import url("../../css/reset.css");
-@import url("../../css/style.css");
-header .logo a {
-  color: #d1180b;
-}
 #selected {
   color: #d1180b;
 }
-
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 61px;
-  width: 87%;
-  padding: 20px;
-  margin: 0 auto;
-  margin-bottom: 100px;
+.search__box--cotainer {
+  margin: 50px 0px;
 }
 
-.grid-item {
-  width: 260px;
-  height: 300px;
-  border: 1px solid #ddd;
-  overflow: hidden;
-  cursor: pointer;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+.search__box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid;
+  margin: 0 auto;
+  width: 37%;
+  input {
+    border: unset;
+    outline: unset;
+    width: 90%;
+    font-size: 2em;
+    text-align: center;
+  }
   p {
-    margin: 10px 0px 0px 10px;
-    position: absolute;
-    color: #333;
-    font-size: 1em;
-    font-weight: bold;
-    line-height: normal;
-    letter-spacing: -0.02em;
+    font-size: 2em;
   }
 }
 
-.grid-item img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+#shop__header--photoBox {
+  width: 74%;
+  height: 200px;
 }
+#shop__main--box {
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.shop__main--styleBox {
+  width: 69%;
+}
+
 .box {
   position: absolute;
-  left: 2%;
-  top: 25%;
-  transform: translateY(-50%);
-  text-align: center;
-  padding: 20px;
-  border-right: 2px solid #d1180b;
+  border-right: 2px solid red;
+  width: 2%;
+  height: 32vh;
+  padding: 50px;
+  top: 162px;
+  left: 30px;
   a {
     color: #d1180b;
     font-weight: bold;
     cursor: pointer;
   }
-  p {
-    margin-top: 10px;
-    color: #333;
-    font-weight: bold;
-  }
-}
-
-#photoBox {
-  width: 79%;
-}
-#main-box {
-  width: 84%;
 }
